<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/stopButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/stopButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pauseButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startButton" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/pauseButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stopButton" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/startButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stopButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/TextView1"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/TextView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/TextView2"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dots"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dots"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/TextView3"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dots"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/TextView4"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextView3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/NumberAdd1"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:text="@string/NumberAdd1"
        app:layout_constraintBottom_toTopOf="@+id/TextView1"
        app:layout_constraintEnd_toEndOf="@+id/TextView1"
        app:layout_constraintStart_toStartOf="@+id/TextView1" />

    <Button
        android:id="@+id/NumberAdd2"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:text="@string/NumberAdd2"
        app:layout_constraintBottom_toTopOf="@+id/TextView2"
        app:layout_constraintEnd_toEndOf="@+id/TextView2"
        app:layout_constraintStart_toStartOf="@+id/TextView2" />

    <Button
        android:id="@+id/NumberAdd3"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:text="@string/NumberAdd3"
        app:layout_constraintBottom_toTopOf="@+id/TextView3"
        app:layout_constraintEnd_toEndOf="@+id/TextView3"
        app:layout_constraintStart_toStartOf="@+id/TextView3" />

    <Button
        android:id="@+id/NumberAdd4"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:text="@string/NumberAdd4"
        app:layout_constraintBottom_toTopOf="@+id/TextView4"
        app:layout_constraintEnd_toEndOf="@+id/TextView4"
        app:layout_constraintStart_toEndOf="@+id/NumberAdd3"
        app:layout_constraintStart_toStartOf="@+id/TextView4" />

    <Button
        android:id="@+id/NumberSub1"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:text="@string/NumberSub1"
        app:layout_constraintEnd_toEndOf="@+id/TextView1"
        app:layout_constraintStart_toStartOf="@+id/TextView1"
        app:layout_constraintTop_toBottomOf="@+id/TextView1" />

    <Button
        android:id="@+id/NumberSub2"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:text="@string/NumberSub2"
        app:layout_constraintEnd_toEndOf="@+id/TextView2"
        app:layout_constraintStart_toStartOf="@+id/TextView2"
        app:layout_constraintTop_toBottomOf="@+id/TextView2" />

    <Button
        android:id="@+id/NumberSub3"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:text="@string/NumberSub3"
        app:layout_constraintEnd_toEndOf="@+id/TextView3"
        app:layout_constraintStart_toStartOf="@+id/TextView3"
        app:layout_constraintTop_toBottomOf="@+id/TextView3" />

    <Button
        android:id="@+id/NumberSub4"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:text="@string/NumberSub4"
        app:layout_constraintEnd_toEndOf="@+id/TextView4"
        app:layout_constraintStart_toStartOf="@+id/TextView4"
        app:layout_constraintTop_toBottomOf="@+id/TextView4" />

</androidx.constraintlayout.widget.ConstraintLayout>